# yomu

./: .gitignore  .gitmodules  Cargo.toml  README.ja.md  README.md  deny.toml
.analysis/: architecture.md  architecture.yaml
.config/: nextest.toml
.githooks/: pre-commit
.github/: advanced-issue-labeler.yml  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  label-from-issue.yml  release.yml  zizmor.yml
.playwright-cli/: page-2026-03-24T15-08-02-023Z.yml  page-2026-03-24T15-08-06-933Z.yml  page-2026-03-24T15-08-11-478Z.yml  page-2026-03-24T15-08-26-448Z.yml  page-2026-03-25T08-16-55-498Z.yml
adr/: 0001-unify-search-into-3-column-fts5-with-bm25.md  README.md
crates/recall-bench/: Cargo.toml
crates/recall-bench/src/: main.rs
examples/: bench.rs
src/: brief.rs  cli.rs  config.rs  diff_cover_probe.rs  error.rs  fs_optional.rs  indexer.rs  injection_check.rs  io.rs  lib.rs  main.rs  progress.rs  query.rs  query_log.rs  recall.rs  resolver.rs  rust_resolver.rs  shorthand.rs  storage.rs  text.rs  tools.rs  verify.rs
src/brief/: cap.rs  tests.rs  topo.rs
src/config/: tests.rs
src/error/: tests.rs
src/fs_optional/: tests.rs
src/indexer/: chunk_only.rs  chunker.rs  embed.rs  embedder.rs  injection.rs  mod.rs  source_kind.rs  tests.rs  walker.rs
src/indexer/chunk_only/: references.rs
src/indexer/chunker/: css_html.rs  markdown.rs  mod.rs  rust.rs  tests.rs  ts.rs
src/indexer/chunker/ts/: imports.rs
src/indexer/embed/: tests.rs
src/indexer/embedder/: candle.rs  mlx.rs  mod.rs  test_support.rs  tests.rs
src/indexer/injection/: tests.rs
src/indexer/source_kind/: tests.rs
src/indexer/walker/: tests.rs
src/injection_check/: tests.rs
src/io/: tests.rs
src/modernbert/: config.rs  mod.rs  model.rs
src/query/: keywords.rs  mod.rs  rank.rs  tests.rs
src/query_log/: tests.rs
src/recall/: corpus.rs  tests.rs
src/recall/corpus/: tests.rs
src/resolver/: tests.rs
src/rust_resolver/: tests.rs
src/storage/: embed.rs  graph.rs  mod.rs  mutation.rs  schema.rs  search.rs  tests.rs  types.rs
src/storage/search/: fetch.rs
src/text/: tests.rs
src/tools/: briefing.rs  embedder.rs  format.rs  impact.rs  indexing.rs  mod.rs  model.rs  query_emit.rs  reranker.rs  search.rs  status.rs  tests.rs
src/tools/format/: render.rs  tests.rs
src/verify/: tests.rs
tests/: benchmark_kagami.rs  benchmark_vercel_ai.rs  brief_recall.rs  cli.rs  cli_integration.rs  schema_validation.rs  verification.rs  verify_kai_db.rs
tests/fixtures/brief/: baseline.json  gt.yaml
tests/fixtures/injection/: corpus.empty.yaml  corpus.invalid-regex.yaml  corpus.minimal.yaml  corpus.multi-match.yaml  corpus.negative.yaml  corpus.yaml
