[package]
name = "yomu"
version = "0.13.0"
edition = "2024"
description = "Frontend code search for AI agents"
license = "MIT"
repository = "https://github.com/thkt/yomu"

[features]
test-support = ["rurico/test-support"]

[dependencies]
amici = { git = "https://github.com/thkt/amici", rev = "5bb3fc2" }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rurico = { git = "https://github.com/thkt/rurico", rev = "03275f7" }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
strsim = "0.11"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.25"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"

[dev-dependencies]
rurico = { git = "https://github.com/thkt/rurico", rev = "03275f7", features = ["test-support"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
