[package]
name = "yomu"
version = "0.13.2"
edition = "2024"
description = "Frontend code search for AI agents"
license = "MIT"
repository = "https://github.com/thkt/yomu"

[features]
test-support = ["rurico/test-support"]

[dependencies]
amici = { git = "https://github.com/thkt/amici", rev = "8b9fcb5" }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rurico = { git = "https://github.com/thkt/rurico", rev = "350effd" }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
strsim = "0.11"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.25"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"

[dev-dependencies]
rurico = { git = "https://github.com/thkt/rurico", rev = "350effd", features = ["test-support"] }
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# フルパス使用検出
absolute_paths = "deny"
# Rustイディオム (RUST.md idioms table)
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# インポート
wildcard_imports = "deny"
enum_glob_use = "deny"
# 文字列
str_to_string = "deny"
# 引数
needless_pass_by_value = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
