[package]
name = "yomu"
version = "0.15.0"
edition = "2024"
rust-version = "1.95"
description = "Frontend code search for AI agents"
license = "MIT"
repository = "https://github.com/thkt/yomu"

[features]
test-support = ["rurico/test-support"]

[dependencies]
amici = { git = "https://github.com/thkt/amici", rev = "138de41" }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rurico = { git = "https://github.com/thkt/rurico", rev = "ef26de2" }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
strsim = "0.11"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"

[dev-dependencies]
rurico = { git = "https://github.com/thkt/rurico", rev = "ef26de2", features = ["test-support"] }
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# absolute paths
absolute_paths = "deny"
# idiomatic iterators
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# imports
wildcard_imports = "deny"
enum_glob_use = "deny"
# strings
str_to_string = "deny"
# arguments
needless_pass_by_value = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
